fix(style): Hide scrollbars on most browsers
ref #314

--- a/apps/mull-ui/src/styles.scss
+++ b/apps/mull-ui/src/styles.scss
@@ -1,8 +1,6 @@
 @import 'variables.scss';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-/* You can add global styles to this file, and also import other style files */
-
 * {
   font-size: 16px;
   font-family: 'Inter', sans-serif;
@@ -10,6 +8,13 @@
   margin: 0;
   padding: 0;
   border: 0;
+
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 a {
